--- a/servlet1Project/.settings/org.eclipse.wst.common.component
+++ b/servlet1Project/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="testProjectOne">
+    <wb-module deploy-name="servlet1Project">
         <wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="test"/>
-        <property name="java-output-path" value="/testProjectOne/WEB-INF/classes"/>
+        <property name="context-root" value="sp1"/>
+        <property name="java-output-path" value="/servlet1Project/web/WEB-INF/classes"/>
     </wb-module>
 </project-modules>
